# soletta-machine-learning

./: .gitignore  AUTHORS  CMakeLists.txt  README  README.md
docs/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  example_air_conditioner.c  example_doc.c  example_foosball.c  example_sensor_file.c  foosball_example.c  fuzzy_test.cpp  test_memory.c
examples/data/: example_foosball.sample1.conf  example_foosball.sample1.data  example_foosball.simple.conf  example_foosball.simple.data  example_sensor_file1.data  example_sensor_file1.fll  fuzzy_test_1.fll  fuzzy_test_2.fll
simulator/: CMakeLists.txt  run_all_simulations.sh  run_massif_simulations.sh  sml_simulator.c
simulator/simulations/: car_ac.conf  car_ac.data  corner_case.annoy.data  corner_case.change_routine.data  corner_case.conf  corner_case.extrapolate.data  corner_case.extrapolate.linear.data  corner_case.simple.data  corner_case_disable.conf  corner_case_disable.test1.data  corner_case_time.conf  corner_case_time.extrapolate.data  corner_case_time.learn.data  corner_case_weekday.conf  corner_case_weekday.extrapolate.data  corner_case_weekday.extrapolate2.data  corner_case_weekday.learn.data  garden.conf  garden.mentha.data  party.conf  party.project_x.data  shower.conf  shower.multiple_users.data  shower.single_user.data  shower.single_user_workout.data  simple_office.conf  simple_office.forget_lights_on.data  vacation.conf  vacation.data
simulator/simulations/unvalidated/: delivery.conf  delivery.data  home_precense.conf  home_precense.data  tv_content.conf  tv_content.data
sml/: CMakeLists.txt  sml.pc.in
sml/common/include/: config.h.in  macros.h  sml_cache.h  sml_engine.h  sml_matrix.h  sml_string.h  sml_util.h
sml/common/src/: sml_cache.c  sml_engine.c  sml_log.c  sml_main_loop.c  sml_matrix.c  sml_string.c  sml_util.c
sml/include/: sml.h  sml_ann.h  sml_fuzzy.h  sml_log.h  sml_main_loop.h
sml/sml_ann/src/: sml_ann.c  sml_ann_bridge.c  sml_ann_bridge.h  sml_ann_support.c  sml_ann_variable_list.c  sml_ann_variable_list.h
sml/sml_fuzzy/src/: sml_bit_array.c  sml_bit_array.h  sml_fuzzy.c  sml_fuzzy_bridge.cpp  sml_fuzzy_bridge.h  sml_fuzzy_support.c  sml_measure.c  sml_measure.h  sml_observation.c  sml_observation.h  sml_observation_controller.c  sml_observation_controller.h  sml_observation_group.c  sml_observation_group.h  sml_rule_group.c  sml_rule_group.h  sml_terms_manager.c  sml_terms_manager.h
sml/sml_naive/include/: sml_naive.h
sml/sml_naive/src/: sml_naive.c  sml_naive_support.c
soletta_module/: CMakeLists.txt  edison-toolchain.cmake  galileo-toolchain.cmake  i586-poky-linux-uclibc.cmake
soletta_module/machine_learning/: .gitignore  machine_learning.c  machine_learning.json  machine_learning_sml_data.h
soletta_module/samples/: machine-learning-simple.fbp  machine-learning-tag-filter.fbp
soletta_module/samples/foosball/: README  README.md  edison_ann.json  foosball.fbp  foosball_limited.fbp  foosball_machine.fbp  galileo_ann.json  galileo_fuzzy.json  gtk_ann.json  gtk_fuzzy.json  multiple_player_selector.fbp  player_selector.fbp  sol-flow-intel-edison-rev-c-fuzzy.json  sol-flow-intel-galileo-rev-g.json  time.fbp
soletta_module/samples/garden/: controller.fbp  garden.fbp  gtk.conf  gtk_ann.json  gtk_fuzzy.json
soletta_module/samples/sml_garden/: edison_sml_garden.json  engine_controller.fbp  flower_power_status.fbp  gtk_sml_garden.json  is_weekend.fbp  sml_garden.fbp  sol-flow.json
soletta_module/sml_garden/: .gitignore  sml_garden.c  sml_garden.json
